--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "meat_party",
-  "homepage": "https://santuzzxooy.github.io/MeatParty/",
+  "homepage": "https://santuzzxooy.github.io/MeatParty",
   "private": true,
   "version": "0.0.0",
   "type": "module",
